# Shinigami

./: .gitignore  .ryattl  database.sqlite3  pyproject.toml  setup.sql
.ropeproject/: autoimport.db
src/: __main__.py  constants.py  models.py  utils.py
src/extensions/: constants.pyi  models.pyi  room.py  utils.pyi
